src/styles/survey.scss
@import './variables.scss';

.site-wrap,
#__next {
  min-width: 0;
  width: 100%;
}

.sj-body-flex {
  width: 100%;
  min-width: 0;
}

/* !VA  GLOBAL DEFINITIONS
  -border-radius must be set on the panel
*/


.sd-body,
.sd-page,
.sd-page__content,
.sd-row,
.sd-question,
.sd-panel,
.sd-element__content {
  touch-action: pan-y;
}




// !VA Background color
.sd-container-modern {
  background: $home_bg_color;
}

// !VA Base unit and font size
.sd-container-modern {
  --sd-base-vertical-padding: calc(1 * var(--sjs-base-unit, 8px))!important;

  --sd-page-content-padding-left: calc(1 * var(--sjs-base-unit, 8px)) !important;
  --sd-page-content-padding-right: calc(1 * var(--sjs-base-unit, 8px)) !important;

  --sjs-base-unit: 6.5px;
  --sjs-font-size: 15px!important;

  --sjs-primary-backcolor: #2055DA;


  /* !VA GLOBAL CALCS FOR FONT SIZE & LINE HEIGHT - USES BASE FONT SIZE RECALCULATION. You can modify individual element font and line heights, but for mobile sizes will scale organically based on --sjs-font-size   */
  // !VA Default body font and height 
  --sjs-article-font-default-fontSize: calc(1 * (var(--sjs-font-size, 16px)));
  --sjs-article-font-default-lineHeight: calc(1.4 * (var(--sjs-font-size, 16px)));
  // !VA h3 font size and height
  --sjs-article-font-large-fontSize: calc(1.1 * (var(--sjs-font-size, 16px)));
  --sjs-article-font-large-lineHeight: calc(1.4 * (var(--sjs-font-size, 16px)));
  // !VA h2 font size and height
  --sjs-article-font-x-large-fontSize: calc(1.3 * (var(--sjs-font-size, 16px)));
  --sjs-article-font-x-large-lineHeight: calc(1.4 * (var(--sjs-font-size, 16px)));
  // !VA Question titles, a little smaller than the base font size.
  // !VA NOTE: SOME OF THESE ELEMENTS LINE HEIGHT MUST BE SET IN THE ELEMENT CSS!
  --sjs-font-questiontitle-size: calc(.9 * (var(--sjs-font-size)));
  // !VA NOTE: Can't remember what this is
  --sjs-font-editorfont-size: calc(.925 * (var(--sjs-font-size)));

  @include mphone {
    --sjs-base-unit: 7px!important;
    --sjs-font-size: 16.5px!important;
  }
  @include mphone {
    --sjs-base-unit: 8px!important;
    --sjs-font-size: 16.5px!important;
  }
  @include tablet {
    --sjs-base-unit: 9px;
    --sjs-font-size: 20px!important;
    --sjs-article-font-default-lineHeight: calc(1.6 * (var(--sjs-font-size, 16px)));
  }

  @include desktop {
    --sjs-base-unit: 9px;
    --sjs-font-size: 20px!important;
    --sjs-article-font-default-lineHeight: calc(1.6 * (var(--sjs-font-size, 16px)));
  }
  @include ldesktop {
    --sjs-base-unit: 9px;
    --sjs-font-size: 20px!important;
    --sjs-article-font-default-lineHeight: calc(1.6 * (var(--sjs-font-size, 16px)));
  }
}


// !VA PAGE OVERRIDES - 
.sd-container-modern .sd-page.sd-body__page  {
  background: #FFFFFF;
  // !VA This comes out to 10px;
  border-radius: calc(2.5 * (var(--sjs-corner-radius, 4px)));
  // border-radius: 50px!important;
  padding-top: calc(3.5 * (var(--sjs-base-unit, var(--base-unit, 8px))));
  padding-right: calc(3 * (var(--sjs-base-unit, var(--base-unit, 8px))));
  padding-bottom: calc(6 * (var(--sjs-base-unit, var(--base-unit, 8px))));
  padding-left: calc(3 * (var(--sjs-base-unit, var(--base-unit, 8px))));
  @include ldesktop {
    padding-top: calc(4 * (var(--sjs-base-unit, var(--base-unit, 8px)))) !important;
    padding-right: calc(5 * (var(--sjs-base-unit, var(--base-unit, 8px)))) !important;
    padding-bottom: calc(3 * (var(--sjs-base-unit, var(--base-unit, 8px)))) !important;
    padding-left: calc(5 * (var(--sjs-base-unit, var(--base-unit, 8px)))) !important;
  }
}

// !VA Survey body
// -------------------------------------------------------------------------
// !VA  -- background, top and bottom padding, margins, max-width, centered with margin: 0 by default
.sd-container-modern .sd-body.sd-body--static {
  // !VA 720 by default, probably for tablets
  max-width: 1000px;
  // sphone, expand the survey page to the viewport borders. Only works up to 600px- that's were the default SJS breakpoint kicks in
  padding:
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // bottom
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // right
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // bottom
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px))))!important; //left

  // !VA Bump the page up a few pixels, deprecated
  // margin-top: -6px !important;
  // !VA Restore a small padding on mphone and up
  @include mphone {
    padding:
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // bottom
    calc(1 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // right
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // bottom
    calc(1 * (var(--sjs-base-unit, var(--base-unit, 8px))))!important; 
  }
  @include lphone {
    padding:
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // bottom
    calc(1.5 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // right
    calc(0 * (var(--sjs-base-unit, var(--base-unit, 8px)))) // bottom
    calc(1.5 * (var(--sjs-base-unit, var(--base-unit, 8px))))!important; 
  }
}

// !VA Overrides default.scss
.sd-panel.sd-element--nested > .sd-panel__content {
    padding-bottom: var(--sd-base-padding);
    padding-bottom: 0;
  --animation-padding-top: var(--sd-base-padding);
}

// !VA DEFAULT PANEL CONTENT PADDING - Whitespace above and below the panel content - NOT the whitespace between the panel boundary and the content! Sets the whitespace between panels
.sd-container-modern .sd-panel__content {
  padding-top: calc(1 * (var(--sjs-base-unit, var(--base-unit, 8px))));
  // !VA Overrides default.scss
  padding-bottom: calc(1* (var(--sjs-base-unit, var(--base-unit, 8px))))!important;
  
  @include ldesktop {
    padding-top: calc(1 * (var(--sjs-base-unit, var(--base-unit, 8px))));
    // !VA Overrides default.scss
    padding-bottom: calc(1* (var(--sjs-base-unit, var(--base-unit, 8px))))!important;
  }
}
/* ... */

